--- a/src/main/webapp/include/partner/partnerfreelancer.xhtml
+++ b/src/main/webapp/include/partner/partnerfreelancer.xhtml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="iso-8859-1"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <ui:composition xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:b="http://mogwai.sourceforge.net/layout"
@@ -19,7 +19,7 @@
     <ui:define name="content">
         <b:gridBagLayout rows="p,10" cols="200,p">
             <b:cell y="1" x="1">
-                <h:outputText styleClass="title" value="Geschäftspartner Freiberufler"/>
+                <h:outputText styleClass="title" value="GeschÃ¤ftspartner Freiberufler"/>
             </b:cell>
 
             <b:cell y="1" x="2">
@@ -81,7 +81,7 @@
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <h:outputText value="Verfügbarkeit"/>
+                            <h:outputText value="VerfÃ¼gbarkeit"/>
                         </f:facet>
                         <h:outputText value="#{row.availabilityAsDate}"/>
                     </h:column>
@@ -100,7 +100,7 @@
                     <h:column>
                         <f:facet name="header">
                         </f:facet>
-                        <b:commandLink title="Zuordnung löschen"
+                        <b:commandLink title="Zuordnung lÃ¶schen"
                                        action="#{partnerBackingBean.commandRemoveFreelancer}" immediate="true">
                             <img src="${facesContext.externalContext.requestContextPath}/images/delete.gif"/>
                             <a4j:support eventsQueue="powerstaff" event="onclick" reRender="partnerliste"/>
