--- a/src/main/webapp/include/customer/customerhistory.xhtml
+++ b/src/main/webapp/include/customer/customerhistory.xhtml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="iso-8859-1"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <ui:composition xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:b="http://mogwai.sourceforge.net/layout"
@@ -70,7 +70,7 @@
                     <h:column>
                         <f:facet name="header">
                         </f:facet>
-                        <b:commandLink title="Eintrag löschen" immediate="true"
+                        <b:commandLink title="Eintrag lÃ¶schen" immediate="true"
                                        action="#{customerBackingBean.commandDeleteHistoryEntry}">
                             <img src="${facesContext.externalContext.requestContextPath}/images/delete.gif"/>
                             <a4j:support eventsQueue="powerstaff" event="onclick"
