--- a/src/main/webapp/include/freelancer/freelancersimilar.xhtml
+++ b/src/main/webapp/include/freelancer/freelancersimilar.xhtml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="iso-8859-1"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <ui:composition xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:b="http://mogwai.sourceforge.net/layout"
@@ -9,7 +9,7 @@
                 template="/template/powerstaff.xhtml">
     <ui:define name="pagetitle">
         <h:outputText
-                value="Ähnliche Profile von #{freelancerBackingBean.data.entity.name1} #{freelancerBackingBean.data.entity.name2}"/>
+                value="Ã„hnliche Profile von #{freelancerBackingBean.data.entity.name1} #{freelancerBackingBean.data.entity.name2}"/>
     </ui:define>
     <ui:define name="mainmenu">
         <ui:include src="/include/mainmenu.xhtml"/>
@@ -21,7 +21,7 @@
         <b:gridBagLayout rows="p,10" cols="200,p">
             <b:cell y="1" x="1">
                 <h:outputText styleClass="title"
-                              value="Ähnliche Profile von #{freelancerBackingBean.data.entity.name1} #{freelancerBackingBean.data.entity.name2}"/>
+                              value="Ã„hnliche Profile von #{freelancerBackingBean.data.entity.name1} #{freelancerBackingBean.data.entity.name2}"/>
             </b:cell>
 
             <b:cell y="1" x="2">
@@ -40,7 +40,7 @@
                     <b:gridBagLayout cols="20,20,20,20,20,20,20,20,20,20,20,right:*"
                                      rows="20">
                         <b:cell x="1" y="1">
-                            <pretty:link mappingId="freelancermain" title="Zurück">
+                            <pretty:link mappingId="freelancermain" title="ZurÃ¼ck">
                                 <f:param value="#{freelancerBackingBean.data.currentEntityId}"/>
                                 <img src="${facesContext.externalContext.requestContextPath}/images/back.gif"/>
                             </pretty:link>
