--- a/src/main/webapp/include/project/projectmain.xhtml
+++ b/src/main/webapp/include/project/projectmain.xhtml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="iso-8859-1"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <ui:composition xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:b="http://mogwai.sourceforge.net/layout"
@@ -53,7 +53,7 @@
                 </h:commandLink>
             </b:cell>
             <b:cell x="3" y="1">
-                <h:commandLink title="Nächster Datensatz" action="#{projectBackingBean.commandNext}"
+                <h:commandLink title="NÃ¤chster Datensatz" action="#{projectBackingBean.commandNext}"
                                onclick="if (!checkForChangedData()) {return false;}">
                     <img src="${facesContext.externalContext.requestContextPath}/images/next.gif"/>
                 </h:commandLink>
@@ -76,8 +76,8 @@
                 </h:commandLink>
             </b:cell>
             <b:cell x="9" y="1">
-                <h:commandLink title="Löschen" action="#{projectBackingBean.commandDelete}"
-                               onclick="if (!confirm('Wollen Sie diesen Datensatz wirklick löschen?')) {return false;}"
+                <h:commandLink title="LÃ¶schen" action="#{projectBackingBean.commandDelete}"
+                               onclick="if (!confirm('Wollen Sie diesen Datensatz wirklick lÃ¶schen?')) {return false;}"
                                rendered="#{!empty projectBackingBean.data.entity.id}">
                     <img src="${facesContext.externalContext.requestContextPath}/images/delete.gif"/>
                 </h:commandLink>
