--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/freelancer/freelancerhistory.xhtml
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/freelancer/freelancerhistory.xhtml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="iso-8859-1"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <ui:composition xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:b="http://mogwai.sourceforge.net/layout"
@@ -71,7 +71,7 @@
                     <h:column>
                         <f:facet name="header">
                         </f:facet>
-                        <h:commandLink title="Eintrag löschen" immediate="true"
+                        <h:commandLink title="Eintrag lÃ¶schen" immediate="true"
                                        action="#{freelancerBackingBean.commandDeleteHistoryEntry}">
                             <img src="${facesContext.externalContext.requestContextPath}/images/delete.gif"/>
                         </h:commandLink>
