--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/project/projectsimilar.xhtml
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/project/projectsimilar.xhtml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="iso-8859-1"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <ui:composition xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:b="http://mogwai.sourceforge.net/layout"
@@ -40,7 +40,7 @@
                     <b:gridBagLayout cols="20,20,20,20,20,20,20,20,20,20,20,right:*"
                                      rows="20">
                         <b:cell x="1" y="1">
-                            <pretty:link mappingId="projectmain" title="Zurück">
+                            <pretty:link mappingId="projectmain" title="ZurÃ¼ck">
                                 <f:param value="#{projectBackingBean.data.currentType}"/>
                                 <f:param value="#{projectBackingBean.data.currentTypeId}"/>
                                 <f:param value="#{projectBackingBean.data.currentEntityId}"/>
